--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,9 +14,18 @@
 .hide{
     visibility: hidden;
 }
+.hidden{
+    display: none;
+}
 .rounded2r{
         border-radius: 0px 25px 25px 0px;
     }
 .txt-centre{
     text-align: center;
     }
+.m-7p{
+    margin: 7px;
+}
+.fw-normal{
+    font-weight: normal !important;
+}
