--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -200,6 +200,7 @@ h1,h2,h3,h4,h5,h6{
     padding: 10px 30px;
     margin-left: 15px;
     border-radius: 5px;
+    cursor: pointer;
 }
 .searchicon i{
     margin-left: -7px;
@@ -333,11 +334,11 @@ h1,h2,h3,h4,h5,h6{
 }
 .gallertab.owl-carousel .owl-nav .owl-prev
 {
-    left: 0px;
+    left: -12px;
 }
 .gallertab.owl-carousel .owl-nav .owl-next
 {
-    right: 0px;
+    right: -12px;
 }
 .gallertab.owl-carousel .owl-dots
 {
@@ -649,6 +650,7 @@ h1,h2,h3,h4,h5,h6{
     color: #067265;
     margin-bottom: 20px;
     margin-top: 20px;
+    text-align: center;
 }
 .upload-thumb input{
     position: absolute;
@@ -667,7 +669,7 @@ h1,h2,h3,h4,h5,h6{
     font-family: 'Montserrat';
     border: none;
     color: #000000;
-    width: 100px;
+    width: 85px;
     margin: 5px;
 }
 .maturitybox h2{
@@ -714,8 +716,8 @@ h1,h2,h3,h4,h5,h6{
     top: 5px;
 }
 .select2-container--default .select2-results__option--selected{
-    background-color: #ffffff;
-    color: #ffffff;
+    color: #000000;
+    background-color: #e9ebe9;
 }
 .select2-container--default .select2-results__option--highlighted.select2-results__option--selectable{
 
@@ -724,19 +726,8 @@ h1,h2,h3,h4,h5,h6{
     outline: none;
 }
 .select2-results__option--selectable{
-    color: #ffffff;
-    background-image: url(../images/gallerytab.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 5px;
-    margin: 5px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Montserrat';
-    font-weight: bold;
-    font-size: 14px;
+    color: #000000;
+    background-color: #e9ebe9;
 }
 .select2-container--default .select2-selection--single{
     border-radius: 0px;
@@ -757,6 +748,25 @@ h1,h2,h3,h4,h5,h6{
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove{
     top: -14px;
     font-size: 34px;
+}
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable{
+    background-color: #14c4af;
+}
+.subject-matter-dropdown-container .select2-results .select2-results__option
+{
+    background-image: url(../images/gallerytab.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px;
+    margin: 5px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    font-size: 14px;
+    color: #ffffff;
 }
 /*=======================
 /** Terms and conditions CSS
@@ -1051,4 +1061,35 @@ h1,h2,h3,h4,h5,h6{
 }
 .usercomment img{
     margin-right: 10px;
+}
+.artsoption .commissions{
+    background-color: #c0c416;
+    padding: 5px;
+}
+.item-active .tabbox::before{
+   opacity: -0.7;
+}
+.artimgpost
+{
+    display: inline-block;
+    position: relative;
+}
+.upload-popup .modal-header .close{
+    cursor: pointer;
+}
+.upload-popup .modal-header .close span{
+    font-size: 22px;
+}
+.tabbox{
+    width: 195px;
+}
+.no-spacing{
+    margin: 0px;
+    padding: 0px;
+}
+.atrtspostimg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 0 2px 16px var(--shadow);
 }
