--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -42,3 +42,19 @@
     width: 100px !important;
     height: 100px !important;
 }
+
+.w-60-p{
+    width: 60%;
+}
+
+.w-30-p{
+    width: 30%;
+}
+.w-10-p{
+    width: 10%;
+}
+.replybtn{
+    width: 40%;
+    margin: auto;
+    padding-left: 0;
+}
