--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1247,7 +1247,7 @@ h6 {
     background-color: #e9ebe9;
 }
 
-.commentsbox,
+/*.commentsbox,*/
 .reviewbox {
     padding: 10px;
     height: 110vh;
@@ -1413,7 +1413,8 @@ h6 {
 }
 
 .usercommentbox {
-    height: 420px;
+    height: 470px;
+    /*max-height: ;*/
     overflow-y: scroll;
 }
 
@@ -1507,3 +1508,16 @@ h6 {
     color: white;
     font-weight: bolder;
 }
+.art-page-gallery .atrtspostimg a, .postslider .owl-item .item{display: block;width: 100%;position: relative;overflow: hidden;max-width: 16.66%;}
+.art-page-gallery .atrtspostimg a:after, .postslider .owl-item .item:after{content: "";padding-bottom: 100%;display: block;width: 100%;}
+.art-page-gallery .atrtspostimg a img,
+.postslider .owl-item .item img{width: 100%;height: 100%;position: absolute;object-fit: cover;}
+.row-wrap{display: flex;flex-wrap: wrap;}
+#comments{background-color: #e9ebe9;}
+#comments .makecomment{padding:0px 15px 15px;}
+#comments .makecomment .btngreen{border-radius:0px;width: 100%;max-width: 100px;}
+#comments .makecomment .btngreen:hover{background-color: #000;color: #fff;border-color: #000;}
+#comments .makecomment .make-control{max-width: calc(100% - 100px);}
+.commentsbox .usercomment{max-width: 100%;overflow: hidden;}
+.usercommentbox .user-image{text-align: center;}
+.postslider .owl-item .item{max-width: 100%;}
