--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,8 @@
 /******** Fontface Fonts ********/
 
 @font-face {
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     src: url('../font/montserrat-regular.woff2') format('woff2'), url('../font/montserrat-regular.woff') format('woff');
     font-style: normal;
     font-display: swap;
@@ -9,7 +10,8 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     src: url('../font/montserrat-bold.woff2') format('woff2'), url('../font/montserrat-bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
@@ -17,7 +19,8 @@
 }
 
 @font-face {
-    font-family: 'Anton';
+    /*font-family: 'Anton';*/
+    font-family: 'Verdana, sans-serif' !important;
     src: url('../font/anton-regular.woff2') format('woff2'), url('../font/anton-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -194,7 +197,8 @@ select {
 =========================*/
 
 body {
-    font-family: 'Anton';
+    /*font-family: 'Anton';*/
+    font-family: 'Verdana, sans-serif' !important;
     line-height: 1.15;
     background-color: #fff;
     color: #000000;
@@ -322,13 +326,15 @@ h6 {
 
 .searchbox .form-control {
     border-radius: 5px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .header-dropdown {
     display: flex;
     justify-content: flex-end;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .profile a,
@@ -425,7 +431,8 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .loginregisterbtn a {
@@ -507,7 +514,8 @@ h6 {
 
 .tabbox h2 {
     color: #ffffff;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .tabbox::before {
@@ -581,7 +589,8 @@ h6 {
 }
 
 .meddropdown {
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     color: #ffffff;
     padding: 5px 10px;
     background-color: #14c4af;
@@ -589,7 +598,8 @@ h6 {
 
 .mediums .dropdown-item {
     padding: 5px 30px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .commissions {
@@ -599,7 +609,8 @@ h6 {
 }
 
 .commissions label {
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     margin-right: 5px;
 }
 
@@ -664,7 +675,8 @@ h6 {
 #footer {
     background-color: #14c4af;
     padding: 10px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 #footer>.row {
@@ -842,7 +854,8 @@ h6 {
 
 .upload-btn-wrapper a {
     font-size: 100px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .upload-btn-wrapper input[type=file] {
@@ -881,7 +894,8 @@ h6 {
 
 .thubnailbtn a {
     background-color: #ffffff;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     border: none;
     color: #000000;
     width: 85px;
@@ -896,7 +910,8 @@ h6 {
 
 .maturityrating {
     max-width: 1000px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     padding: 10px 0px;
     margin: auto;
 }
@@ -997,7 +1012,8 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
     font-size: 14px;
     color: #fffffff;
@@ -1010,7 +1026,8 @@ h6 {
 
 .terms-and-conditions {
     margin: 30px 0px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 
@@ -1025,14 +1042,16 @@ h6 {
 .loginregistertext {
     margin: 20px 0px;
     text-align: center;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .login-registerwrapper {
     max-width: 450px;
     margin: auto;
     background-color: #e9ebe9;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .login-register-form {
@@ -1080,7 +1099,8 @@ h6 {
 }
 
 .profile-wrapper {
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .profile-my-account h3.profile-title {
@@ -1111,7 +1131,8 @@ h6 {
     color: #000;
     content: "\f063";
     display: inline-block;
-    font-family: 'Font Awesome 5 Brands';
+    /*font-family: 'Font Awesome 5 Brands';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-size: 14px;
     position: absolute;
     right: 10px;
@@ -1269,7 +1290,8 @@ h6 {
 .despostdate {
     text-align: center;
     color: #6c757d;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -1290,7 +1312,8 @@ h6 {
 
 .deshastag h3 .destag {
     color: #6c757d;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
@@ -1308,13 +1331,15 @@ h6 {
 
 .desuername {
     color: #6c757d;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
 .descuserbox>h2 {
     color: #6c757d;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
@@ -1325,7 +1350,8 @@ h6 {
 
 .deslike p {
     color: #6c757d;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
     margin: 0px 10px;
 }
@@ -1348,7 +1374,8 @@ h6 {
 .destitle h2 {
     font-size: 32px;
     margin-left: 20px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .desowner {
@@ -1367,7 +1394,8 @@ h6 {
 
 .desinfo p {
     color: #6c757d;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
@@ -1409,7 +1437,8 @@ h6 {
     width: 90%;
     padding: 10px;
     text-align: center;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .usercommentbox {
@@ -1423,7 +1452,8 @@ h6 {
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    font-family: 'Montserrat';
+    /*font-family: 'Montserrat';*/
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 .usercomment img {
