--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
     /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
+    font-family: 'Montserrat, sans-serif' !important;
     src: url('../font/montserrat-regular.woff2') format('woff2'), url('../font/montserrat-regular.woff') format('woff');
     font-style: normal;
     font-display: swap;
@@ -11,7 +11,7 @@
 
 @font-face {
     /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
+    font-family: 'Montserrat, sans-serif' !important;
     src: url('../font/montserrat-bold.woff2') format('woff2'), url('../font/montserrat-bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
@@ -19,12 +19,27 @@
 }
 
 @font-face {
-    /*font-family: 'Anton';*/
-    font-family: 'Verdana, sans-serif' !important;
+    /* font-family: 'Anton'; */
+    font-family: 'Anton, sans-serif' !important;
     src: url('../font/anton-regular.woff2') format('woff2'), url('../font/anton-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
+}
+
+@font-face {
+    /*font-family: 'Anton';*/
+    font-family: 'Verdana, sans-serif' !important;
+    /* src: url('../font/Verdana.woff2') format('woff2'), url('../font/Verdana.woff') format('woff'); */
+    src: url('../font/Verdana.ttf') format('ttf');
+    /*, url('../font/Verdana.woff') format('woff'); */
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+body {
+    font-family: 'Verdana, sans-serif' !important;
 }
 
 
@@ -197,8 +212,6 @@ select {
 =========================*/
 
 body {
-    /*font-family: 'Anton';*/
-    font-family: 'Verdana, sans-serif' !important;
     line-height: 1.15;
     background-color: #fff;
     color: #000000;
@@ -326,15 +339,11 @@ h6 {
 
 .searchbox .form-control {
     border-radius: 5px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .header-dropdown {
     display: flex;
     justify-content: flex-end;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .profile a,
@@ -431,8 +440,6 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .loginregisterbtn a {
@@ -514,8 +521,6 @@ h6 {
 
 .tabbox h2 {
     color: #ffffff;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .tabbox::before {
@@ -590,8 +595,6 @@ h6 {
 }
 
 .meddropdown {
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     color: #ffffff;
     padding: 5px 10px;
     background-color: #14c4af;
@@ -599,8 +602,6 @@ h6 {
 
 .mediums .dropdown-item {
     padding: 5px 30px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .commissions {
@@ -610,8 +611,6 @@ h6 {
 }
 
 .commissions label {
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     margin-right: 5px;
 }
 
@@ -676,8 +675,6 @@ h6 {
 #footer {
     background-color: #14c4af;
     padding: 10px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 #footer>.row {
@@ -855,8 +852,6 @@ h6 {
 
 .upload-btn-wrapper a {
     font-size: 100px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .upload-btn-wrapper input[type=file] {
@@ -895,8 +890,6 @@ h6 {
 
 .thubnailbtn a {
     background-color: #ffffff;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     border: none;
     color: #000000;
     width: 85px;
@@ -911,8 +904,6 @@ h6 {
 
 .maturityrating {
     max-width: 1000px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     padding: 10px 0px;
     margin: auto;
 }
@@ -1011,8 +1002,6 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
     font-size: 14px;
     /* color: #FFFFFF; */
@@ -1025,8 +1014,6 @@ h6 {
 
 .terms-and-conditions {
     margin: 30px 0px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 
@@ -1041,16 +1028,12 @@ h6 {
 .loginregistertext {
     margin: 20px 0px;
     text-align: center;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .login-registerwrapper {
     max-width: 450px;
     margin: auto;
     background-color: #e9ebe9;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .login-register-form {
@@ -1097,10 +1080,7 @@ h6 {
     margin: 30px 0px;
 }
 
-.profile-wrapper {
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
-}
+.profile-wrapper {}
 
 .profile-my-account h3.profile-title {
     background-color: #e9ebe9;
@@ -1130,8 +1110,6 @@ h6 {
     color: #000;
     content: "\f063";
     display: inline-block;
-    /*font-family: 'Font Awesome 5 Brands';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-size: 14px;
     position: absolute;
     right: 10px;
@@ -1291,8 +1269,6 @@ h6 {
 .despostdate {
     text-align: center;
     color: #6c757d;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -1313,8 +1289,6 @@ h6 {
 
 .deshastag h3 .destag {
     color: #6c757d;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
@@ -1332,15 +1306,11 @@ h6 {
 
 .desuername {
     color: #6c757d;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
 .descuserbox>h2 {
     color: #6c757d;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
@@ -1351,8 +1321,6 @@ h6 {
 
 .deslike p {
     color: #6c757d;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
     margin: 0px 10px;
 }
@@ -1375,8 +1343,6 @@ h6 {
 .destitle h2 {
     font-size: 32px;
     margin-left: 20px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .desowner {
@@ -1395,8 +1361,6 @@ h6 {
 
 .desinfo p {
     color: #6c757d;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
     font-weight: bold;
 }
 
@@ -1438,8 +1402,6 @@ h6 {
     width: 90%;
     padding: 10px;
     text-align: center;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .usercommentbox {
@@ -1453,8 +1415,6 @@ h6 {
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    /*font-family: 'Montserrat';*/
-    font-family: 'Verdana, sans-serif' !important;
 }
 
 .usercomment img {
